# uxc

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  build.rs
.claude/: settings.local.json  skills
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  e2e-smoke.yml  holon-trigger.yml  release.yml
HOLON_OUTPUT_DIR/: summary.md
docs/: auth-secret-sources.md  cli-dynamic-help-json-default-plan.md  cli-output-unification-plan.md  daemon-service.md  logging.md  mcp-http-transport-plan.md  oauth-mcp-http.md  post-migration-checklist.md  public-endpoints.md  quickstart.md  release.md  schema-mapping.md  skills.md
e2e/manual/: README.md
e2e/manual/1password-secret-op/: README.md
e2e/manual/github-mcp-oauth/: README.md
e2e/manual/notion-mcp-oauth/: README.md
scripts/: create_issues.py  install.sh  release-check.sh  update-homebrew-formula.sh
skills/context7/: SKILL.md
skills/context7/references/: usage-patterns.md
skills/context7/scripts/: validate.sh
skills/deepwiki/: SKILL.md
skills/deepwiki/agents/: openai.yaml
skills/deepwiki/references/: usage-patterns.md
skills/deepwiki/scripts/: validate.sh
skills/lifi-mcp-skill/: SKILL.md
skills/lifi-mcp-skill/references/: usage-patterns.md
skills/lifi-mcp-skill/scripts/: validate.sh
skills/linear-mcp-skill/: SKILL.md
skills/linear-mcp-skill/agents/: openai.yaml
skills/linear-mcp-skill/references/: usage-patterns.md
skills/linear-mcp-skill/scripts/: validate.sh
skills/notion-mcp-skill/: SKILL.md
skills/notion-mcp-skill/references/: error-handling.md  oauth-and-binding.md  usage-patterns.md
skills/notion-mcp-skill/scripts/: validate.sh
skills/okx-mcp-skill/: SKILL.md
skills/okx-mcp-skill/references/: usage-patterns.md
skills/playwright-mcp-skill/: SKILL.md
skills/playwright-mcp-skill/references/: usage-patterns.md
skills/playwright-mcp-skill/scripts/: validate.sh
skills/uxc/: SKILL.md
skills/uxc/references/: error-handling.md  oauth-and-binding.md  protocol-cheatsheet.md  public-endpoints.md  usage-patterns.md
skills/uxc/scripts/: validate.sh
src/: cli.rs  daemon.rs  daemon_log.rs  error.rs  http_client.rs  lib.rs  main.rs  output.rs  protocol.rs
src/adapters/: graphql.rs  grpc.rs  jsonrpc.rs  mcp.rs  mod.rs  openapi.rs
src/adapters/grpc/: reflection.proto
src/adapters/mcp/: client.rs  http_transport.rs  mod.rs  transport.rs  types.rs
src/auth/: mod.rs  oauth.rs  profile.rs  storage.rs
src/cache/: config.rs  mod.rs  stats.rs  storage.rs
src/schema_mapping/: mod.rs
src/test_server/: common.rs  graphql.rs  grpc.rs  jsonrpc.rs  mcp_http.rs  mcp_stdio.rs  mod.rs  openapi.rs
src/test_server/proto/: addsvc.proto  addsvc.rs
tests/: auth_adapter_integration_test.rs  auth_binding_cli_test.rs  auth_integration_test.rs  benchmark_test.rs  cache_cli_test.rs  cache_config_test.rs  cli_error_output_test.rs  cli_help_regression_test.rs  cli_version_shortcuts_test.rs  daemon_cli_test.rs  daemon_logging_test.rs  daemon_reuse_test.rs  graphql_contract_test.rs  jsonrpc_contract_test.rs  jsonrpc_integration_test.rs  link_cli_test.rs  local_e2e_test.rs  offline_cache_test.rs  openapi_contract_test.rs  protocol_test.rs
tests/common/: mod.rs
tests/e2e/fixtures/: graphql_schema.graphql  mcp_tools.json  openapi.json  openrpc.json
