[package]
name = "uxc"
version = "0.1.0"
edition = "2021"
authors = ["UXC Contributors"]
description = "Universal X-Protocol Call - Schema-driven multi-protocol RPC execution runtime"
license = "MIT"
repository = "https://github.com/your-org/uxc"
readme = "README.md"
keywords = ["rpc", "cli", "openapi", "grpc", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Dependency overrides for older Rust version
getrandom = "0.2"

# CLI Framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# HTTP Client
reqwest = { version = "0.11", features = ["json"], default-features = false }
url = "2.4"

# JSON/Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOML Support
toml = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI Support
openapiv3 = "1.0"

# GraphQL Support
graphql_client = "0.13"

# gRPC Support
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"
tower = "0.4"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
prost-types = "0.12"

# MCP Support (placeholder - adjust as needed)
# mcp-sdk = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
# tempfile 3.10 has issues with getrandom 0.4, use older version
tempfile = ">=3.8, <3.10"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "uxc"
path = "src/main.rs"

[lib]
name = "uxc"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
