[package]
name = "uxc"
version = "0.4.1"
edition = "2021"
authors = ["UXC Contributors"]
description = "Universal API calling CLI for URL-first schema discovery and invocation across OpenAPI, gRPC, GraphQL, MCP, and JSON-RPC"
license = "MIT"
repository = "https://github.com/holon-run/uxc"
homepage = "https://github.com/holon-run/uxc"
readme = "README.md"
keywords = ["cli", "rpc", "openapi", "graphql", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Dependency overrides for older Rust version
getrandom = "0.2"

# CLI Framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

# JSON/Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for basic auth
base64 = "0.21"
sha2 = "0.10"

# TOML Support
toml = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
futures = "0.3"

# Web server for test servers
axum = { version = "0.7", optional = true }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI Support
openapiv3 = "1.0"

# GraphQL Support
graphql_client = "0.13"

# gRPC Support
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"
tower = "0.4"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
prost-types = "0.12"

# MCP Support (placeholder - adjust as needed)
# mcp-sdk = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
# tempfile 3.10 has issues with this project's pinned getrandom 0.2, use older version
tempfile = ">=3.8, <3.10"
# CLI testing
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.2"

[[bin]]
name = "uxc"
path = "src/main.rs"

# Test server binaries
[[bin]]
name = "uxc-test-openapi-server"
path = "src/bin/uxc-test-openapi-server.rs"
required-features = ["test-server"]

[[bin]]
name = "uxc-test-graphql-server"
path = "src/bin/uxc-test-graphql-server.rs"
required-features = ["test-server"]

[[bin]]
name = "uxc-test-jsonrpc-server"
path = "src/bin/uxc-test-jsonrpc-server.rs"
required-features = ["test-server"]

[lib]
name = "uxc"
path = "src/lib.rs"

[features]
default = []
test-server = ["axum"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "uxc-test-grpc-server"
path = "src/bin/uxc-test-grpc-server.rs"
required-features = ["test-server"]

[[bin]]
name = "uxc-test-mcp-http-server"
path = "src/bin/uxc-test-mcp-http-server.rs"
required-features = ["test-server"]

[[bin]]
name = "uxc-test-mcp-stdio-server"
path = "src/bin/uxc-test-mcp-stdio-server.rs"
required-features = ["test-server"]
